# fache

./: .gitignore  README.md  pyproject.toml  segment-anything
conf/: inference_config.yaml  train_config.yaml
fache/: api.py  dataset.py  image.py  model.py  work.py
fache/tasks/jalan/: dataset.py
fache/tasks/rte/: dataset.py
fache_cli/: frontend.py  server.py  train.py
